>>>>>>>> Changes from version 0.8 to 0.9 <<<<<<<<

- New maintainer (Tomasz Kłoczko). Git repository trasfered from
  https://github.com/itziakos/tvision (previousely owned by
  Ioannis Tziakos <ioannist@enthought.com>)
- fixed autoconf ncurses library detection
- fixed all compile errors using g++ 8.0.x

>>>>>>>> Changes from version 0.7 to 0.8 <<<<<<<<

- Piotr Klaban <makler@man.torun.pl> helped to port the library under
  Sun Solaris 2.6.
- Vitaly Fedrushkov <willy@snowyowl.csu.ac.ru> fixed some warnings with egcs
  and improved signal handling.
- Artur Harasimiuk <maniak@qna.softomat.com.pl> fixed a bug in TMemo.cc.
- Thorsten Dittmar <dittmar@Mathematik.Uni-Marburg.de> helped to spot a
  buffer overflow problem in asm.cc.
- Vladimir Zarozhevsky <vladimir@mark-itt.ru> sent a patch for bsdi.
- Sergey Clushin <serg@lamport.ru> ported the help compiler.
- Helmut Fahrion <hefa@bitctrl.de>

>>>>>>>> Changes from version 0.6 to 0.7 <<<<<<<<

- Vitaly Fedrushkov <willy@snowyowl.csu.ac.ru> added the following changes:
  - fixed a bug in system.cc about function has_colors()
  - changed some things in TMenuView.cc that prevent building with egcs-1.0.3
  - fixed configure.in
- Fixed some cursor things in system.cc.  Nice exit when the user teminates
  the program with Ctrl-C.
- Cosmetic changes and general cleaning in the code.  Now the library should
  compile without warnings, even using flags `-W -Wall'.  If you want to try
  just type:

  CXXFLAGS='-W -Wall' ./configure

  followed by `make'.
- More documentation included.  I used KDOC, a program distributed with KDE.
  KDOC uses specially-formatted documentation embedded in C++ class
  declarations to generate documentation for the classes.  Warning: this work
  is not finished yet.  Only the main classes are documented.
- Changes to fix warnings with egcs-1.1
- John Polstra <jdp@polstra.com> fixed a problem with gcc under FreeBSD

>>>>>>>> Changes from version 0.5 to 0.6 <<<<<<<<

- A real configure script.